--- a/connector-data-service/src/main/resources/application.yaml
+++ b/connector-data-service/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   main:
     allow-bean-definition-overriding: true
 
@@ -13,24 +16,8 @@ spring:
     config:
       enabled: false
 
-  jpa:
-    show-sql: true
-
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
-    hibernate:
-      ddl-auto: update
-
   application:
     name: connector-data-service
-
-  datasource:
-    # CHANGEME
-    url: jdbc:postgresql://localhost:5432/users
-    username: postgres
-    password: usermanager
 
 security:
   # CHANGEME
