--- a/connector-management-service/src/main/resources/application.yaml
+++ b/connector-management-service/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   main:
     allow-bean-definition-overriding: true
 
@@ -13,40 +16,12 @@ spring:
     config:
       enabled: false
 
-  jpa:
-    show-sql: true
-
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
-    hibernate:
-      ddl-auto: update
-
   application:
     name: connector-management-service
 
-  datasource:
-    # CHANGEME
-    url: jdbc:postgresql://localhost:5432/users
-    username: postgres
-    password: usermanager
-
-security:
-  # CHANGEME
-  configurations:
-    - path: /somepath
-      role: somerole
-
-keycloak:
-  auth-server-url: ${AUTH_URL}
-  realm: ${AUTH_REALM}
-  resource: ${AUTH_RESOURCE}
-  public-client: true
-
 server:
   address: 0.0.0.0
-  port: 8080
+  port: 8180
 
 eureka:
   client:
@@ -56,7 +31,7 @@ eureka:
     fetchRegistry: true
 
 management:
-  port: 8081
+  port: 8181
   endpoints:
     web:
       exposure:
