--- a/meta-store/pom.xml
+++ b/meta-store/pom.xml
@@ -80,9 +80,12 @@
             <version>1.5.2</version>
         </dependency>
         <dependency>
-            <groupId>com.stm.pegelhub</groupId>
-            <artifactId>data-lib</artifactId>
-            <version>2022.01</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
