--- a/data-store/src/main/resources/application.yaml
+++ b/data-store/src/main/resources/application.yaml
@@ -25,6 +25,12 @@ security:
     - path: /somepath
       role: somerole
 
+influxDB:
+  url: ${INFLUXDATA_URL}
+  org: ${INFLUXDATA_ORG}
+  bucket: ${INFLUXDATA_BUCKET}
+  token: ${INFLUXDATA_TOKEN}
+
 keycloak:
   auth-server-url: ${AUTH_URL}
   realm: ${AUTH_REALM}
