--- a/service-registry/src/main/resources/application.yaml
+++ b/service-registry/src/main/resources/application.yaml
@@ -26,6 +26,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 management:
   port: 8081
