add Controller with annotations in connector-data-service

--- a/connector-data-service/pom.xml
+++ b/connector-data-service/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>component-skeleton</artifactId>
             <version>2022.01</version>
         </dependency>
+        <dependency>
+            <groupId>com.stm.pegelhub</groupId>
+            <artifactId>data-store</artifactId>
+            <version>2022.01</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <artifactId>connector-data-service</artifactId>
