--- a/meta-store/src/main/resources/application.yaml
+++ b/meta-store/src/main/resources/application.yaml
@@ -43,7 +43,7 @@ spring:
 
 server:
   address: 0.0.0.0
-  port: 8080
+  port: ${APP_PORT}
 
 eureka:
   client:
@@ -53,7 +53,7 @@ eureka:
     fetchRegistry: true
 
 management:
-  port: 8081
+  port: 8181
   endpoints:
     web:
       exposure:
