--- a/routing-proxy/Dockerfile
+++ b/routing-proxy/Dockerfile
@@ -5,13 +5,14 @@ RUN addgroup -S coreapp && adduser -S coreapp -G coreapp
 USER coreapp:coreapp
 
 # RabbitMQ connection
-ENV MQ_URL=rabbit \
-    MQ_USER="" \
-    MQ_PASSWORD=""
+ENV RABBIT_URL=rabbit \
+    RABBIT_USER="" \
+    RABBIT_PASSWORD=""
 
 # Registry configuration
-ENV EUREKA_HOSTNAME=0.0.0.0
-ENV APP_PORT=8090
+ENV SERVICE_REGISTRY_HOST=registry
+ENV SERVICE_REGISTRY=http://$SERVICE_REGISTRY_HOST:8090/eureka
+ENV APP_PORT=8080
 
 # Expose configured port
 EXPOSE $APP_PORT
