--- a/data-store/Dockerfile
+++ b/data-store/Dockerfile
@@ -16,12 +16,12 @@ ENV APP_PORT=8080
 
 # Datasource configuration
 ENV TELEMETRY_STORE_TOKEN=null
-ENV TELEMETRY_STORE_URL=datastore
+ENV TELEMETRY_STORE_URL=http://datastore:8086/
 ENV TELEMETRY_STORE_BUCKET=telemetry
 ENV TELEMETRY_STORE_ORG=influxdb
 
 ENV DATA_STORE_TOKEN=null
-ENV DATA_STORE_URL=datastore
+ENV DATA_STORE_URL=http://datastore:8086/
 ENV DATA_STORE_BUCKET=data
 ENV DATA_STORE_ORG=influxdb
 
