--- a/routing-proxy/src/main/resources/application.yaml
+++ b/routing-proxy/src/main/resources/application.yaml
@@ -59,7 +59,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
   client:
     serviceUrl:
-      defaultZone: ${REGISTRY_URL}
+      defaultZone: ${SERVICE_REGISTRY}
     registerWithEureka: true
     fetchRegistry: true
 
