--- a/connector-management-service/pom.xml
+++ b/connector-management-service/pom.xml
@@ -22,7 +22,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.stm.pegelhub.Application</mainClass>
+                    <mainClass>com.stm.pegelhub.component.ComponentApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
