--- a/connector-management-service/src/main/resources/application.yaml
+++ b/connector-management-service/src/main/resources/application.yaml
@@ -33,7 +33,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${REGISTRY_URL}
+      defaultZone: ${SERVICE_REGISTRY}
     registerWithEureka: true
     fetchRegistry: true
 
